			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05d: *********************************

BUG: (12/11/06, DN) Null exception while accesing artwork in palette components (Bug #1270)
FIX: Detecting if parent is null before calling Constraints.getCurrent().modifyNodeInst(this, oldD)
in NodeInst.modifyInstance()

IMP: (12/6/06, DN) Removed invariant "LibId/CellId/ExportId" values of variables must be in the Snapshot.
    Such variables are almost not used, but the maintanence of this invariant took time.

IMP: (12/5/06, RK) Move information from Tech.java into TechTypeMoCMOS, TechTypeCMOS90, and TechTypeTSMC180.

IMP: (12/5/06, GVG) Changes to get Generation test working after recent modifications. Some changes
to get Routing tests to run from regression. Small changes in VerilogReader.

IMP: (12/5/06, SMR) Made "Routing" test menu work.

BUG: (12/5/06, SMR) Maze routing doesn't work.
FIX: In Routing.findNetEnds(), compare Connections more carefully.

BUG: (12/5/06, SMR) Array command crashes (Bug #1268).
FIX: In Array.ArrayStuff.doIt(), assign "cell" correctly.

BUG: (12/4/06, SMR) Closing a library causes a crash (Bug #1267).
FIX: In Cell.getName(), test for null "groupName" field.

BUG: (12/4/06, GVG) PWLSignal.java: missing initalization of vPoints.
Gate.java: Wrong location of the Point constructor in computePWLOutput.
New timing conditions in DTimViewAnData Liberty parser.
gate_inv_16x_25ff_hiR passes.

BUG: (12/1/06, DN) CellBackup.cellUsages invariant is not valid after rename (Bug #1235).
FIX: In "CellBackup.with" check if "this.d.cellId != d.cellId".

BUG: (12/1/06, DN) Exception checking database invariants (Bug #1266).
FIX: In ArcInst.check snap polygon bounds to database grid.

BUG/IMP: (12/1/06, GVG) Drag-n-dropping a cell group onto a cell produces a NPE (bug #1265).