@@ -4,6 +4,11 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05d: *********************************
 
+BUG/MAN: (1/3/07, SMR) Cannot drag multiple signals from explorer tree to waveform window.
+FIX: In ExplorerTree.java, redid implementation of drag-and-drop from the tree.
+     This has the side-effect of disabling the right-click-drag of cells from one library
+     to another (which used to cause the entire tree to be copied, see bug #630).
+
 BUG: (12/11/06, DN) Null exception while accesing artwork in palette components (Bug #1270)
 FIX: Detecting if parent is null before calling Constraints.getCurrent().modifyNodeInst(this, oldD)
 in NodeInst.modifyInstance()
